Comunicados ahora guardan al usuario

--- a/CER2-POZOMAX/CER2/miapp/templates/miapp/nav.html
+++ b/CER2-POZOMAX/CER2/miapp/templates/miapp/nav.html
@@ -3,10 +3,10 @@
 
 
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary d-none d-sm-block rounded-9" id="nabbar" 
+<nav class="navbar navbar-expand-lg bg-body-tertiary d-none d-sm-block " id="nabbar" 
  
     </button>
-    <div class=" navbar-collapse ms-auto justify-content-center rounded-9" id="navbarNav" style="padding-left: 20px;">
+    <div class=" navbar-collapse ms-auto justify-content-center" id="navbarNav" style="padding-left: 20px;">
       <ul class="navbar-nav ">
           <li class="nav-item">
             <li class="nav-item">
