Carrusel imagen centrada

--- a/CER2-POZOMAX/CER2/miapp/templates/miapp/carrusel.html
+++ b/CER2-POZOMAX/CER2/miapp/templates/miapp/carrusel.html
@@ -10,7 +10,7 @@
         instancia de los comunicados sin que se rompa
        -->
 
-        <img src="{% static "miapp/img/Logo_UTFSM.png" %}" style="max-width: 50vw;" alt =" Logo_UTFSM"  class="img_responsive justify-content-right" id="img_logo">
+        <img src="{% static "miapp/img/Logo_UTFSM.png" %}" style="max-width: 50vw;" alt =" Logo_UTFSM"  class="img_responsive rounded mx-auto d-block" id="img_logo">
       </div>
     </div>
 {% for  comunicado in comunicados %}
